--- a/active/e3tp2/compile.cfg
+++ b/active/e3tp2/compile.cfg
@@ -28,3 +28,9 @@ Enabled=1
 Enabled=1
 [file:.\src\BCD_Adder.v]
 Enabled=1
+[file:.\src\Max7219.v]
+Enabled=1
+[file:.\src\spi_master.v]
+Enabled=1
+[file:.\src\counter.v]
+Enabled=1
